# fprime-gds-plugin-examples

./: README.md  pyproject.toml  setup.py
src/: my_app.py  my_plugin.py
