[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fprime-gds-my-plugin"
version = "0.1.0"
dependencies = [
    "pluggy>=1.3.0",
    "fprime-gds>=3.4.4a1"
]

[project.entry-points.fprime_gds]
my_plugin = "my_plugin:MyPlugin"
my_app = "my_app:MyApp"
